# fastpixels

./: README.md  pyproject.toml
pixels/: main.py
pixels/migrations/: 0001-init.sql
pixels/utils/: database.py
