[tool.poetry]
name = "custompixels"
version = "1.0.0"
description = "A shared virtual canvas you can darw on."
authors = ["vcokltfre <vcokltfre@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.65.1"
uvicorn = {extras = ["standard"], version = "^0.13.4"}
aioredis = "^1.3.1"
asyncpg = "^0.23.0"
starlette-discord = "^0.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
