[tool.poetry]
name = "custompixels"
version = "1.0.0"
description = "A shared virtual canvas you can draw on."
authors = ["vcokltfre <vcokltfre@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.65.1"
uvicorn = {extras = ["standard"], version = "^0.13.4"}
asyncpg = "^0.23.0"
starlette-discord = "^0.1.1"
taskipy = "^1.8.1"
more-itertools = "^8.8.0"

[tool.poetry.dev-dependencies]

[tool.taskipy.tasks]
start-dev = "uvicorn pixels.main:app --reload --env-file .env"
start-dev-fast = "uvicorn pixels.main:app --reload --env-file .env --log-level error"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
